Added results for our latest meet

--- a/schedule.html
+++ b/schedule.html
@@ -23,7 +23,7 @@
 			</header>
 			<main>
 				<section id="main_text">
-					<h2 class="meet_name">Clask of the Inland Northwest</h2>
+					<h2 class="meet_name">Clash of the Inland Northwest</h2>
 					<p>
 						<strong>3rd, 103 points:</strong><br>This meet was a great start to the season. This race went a little faster than it has in previous years, and our men went even faster. This was also only a 6 kilometer race.
 					</p>
@@ -41,7 +41,7 @@
 					</p>
 					<h2 class="meet_name">LC Invite</h2>
 					<p>
-						<strong>Results TBD</strong><br>There are plenty of good schools coming to our home meet, and with our amazing course, there will be quick times.
+						<strong>5th, 108 points:</strong><br>A decent showing for the LC men, and an great showing for the women. The men had six runners under 26:00, but the top five average was 25:05, the fastest this season. The men are looking strong with plenty of depth, something that will be a great strength when we race ten men for conference in three weeks.
 					</p>
 					<h2 class="meet_name">Cascade Conference Championship</h2>
 					<p>
